tests/baselines/reference/ExportObjectLiteralAndObjectTypeLiteralWithAccessibleTypesInNestedMemberTypeAnnotations.errors.txt
==== tests/cases/compiler/ExportObjectLiteralAndObjectTypeLiteralWithAccessibleTypesInNestedMemberTypeAnnotations.ts (4 errors) ====
    module A {
    
        class Point {
            constructor(public x: number, public y: number) { }
        }
    
        export var UnitSquare : {
                   ~~~~~~~~~~~~~~
            top: { left: Point, right: Point },
                                              ~
!!! error TS1005: ';' expected.
                              ~
!!! error TS1005: ';' expected.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            bottom: { left: Point, right: Point }
                                 ~
!!! error TS1005: ';' expected.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        } = null;
    ~~~~~~~~~~~~
!!! error TS2027: Exported variable 'UnitSquare' has or is using private type 'Point'.
    }